---------------------------------------------------------------------------------------------------
Version: 0.3.5
Date: 2025-03-14
  Features:
    - Updated recipe chains for sensors
---------------------------------------------------------------------------------------------------
Version: 0.3.4
Date: 2025-03-07
  Features:
    - Added new lumber mill sound thanks to Cyfagy
    - Added hafnium and rheniun recipe chains
  Changes:
    - removed ammonium-hydroxide-solution. It's kinda the same thing as ammoniacal solution ¯\_(ツ)_/¯
    - crushing tinstone will yield more leadstone. leadstone yields more lead slabs.
  Bugfixes:
    - Productivity modules can now be used with most recipes
    - Propane products are unlocked now after chemical stager. This solves some technology tree cycles.
---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 2025-03-28
  Changes:
    - assembling machine 1 now requires electronic circuits
    - assembling machine 2 now requires advanced circuits
    - electrical components are now made in chemical plant
  Bugfixes:
    - Some ores now require an amount of fluid to be mined (before it was 0)
    - automation 2 technology is now reachable
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 2025-02-28
  Notes:
    - Tech tree up to metallurgic (tier 2), electromagnetic (tier 2) and cryogenic packs is updated but i have not finished my playthrough. Please give me some feedback in the discussions section if you encounter any issues.
  Features:
    - Added new items
    - Added locale for some late game tech
    - Added polish locale thanks to S3BA
    - Added arc-furnace sound thanks to Cyfagy
  Changes:
    - Updated stack sizes. Be carefull when updating.
    - Car is now unlocked earlier