@@ -138,6 +138,7 @@ sp-epoxy=Epoxy
 sp-ethylene=Ethylene
 sp-ethylene-dichloride=Ethylene dichloride
 sp-gallium-resin=Gallium resin
+sp-germanium-tetrachloride=Germanium tetrachloride
 sp-glycerin=Glycerin
 sp-grobgnum-hydroxide=Grobgnum hydroxide
 sp-grobgnum-slurry=Grobgnum slurry
@@ -208,6 +209,7 @@ sp-alumina=Alumina
 sp-aluminum-brass=Aluminum brass
 sp-aluminum-cable=Aluminum cable
 sp-aluminum-frame=Aluminum frame
+sp-aluminum-gallium-arsenide=Aluminum gallium arsenide
 sp-aluminum-ore=Aluminum ore
 sp-aluminum-sheet=Aluminum sheet
 sp-ammonium-metavanadate=Ammonium metavanadate
@@ -418,6 +420,7 @@ sp-geological-science-pack=Geological science pack
 sp-geological-science-pack-1=Geological science pack 1
 sp-geological-science-pack-2=Geological science pack 2
 sp-geological-science-pack-3=Geological science pack 3
+sp-germanium=Germanium
 sp-glass=Glass
 sp-glass-fiber=Glass fiber
 sp-gluon-orb=Gluon orb
@@ -472,6 +475,8 @@ sp-indium-sulfate=Indium sulfate
 sp-induction-hardening-facility=Induction hardening facility
 sp-information-cube=Information cube
 sp-infrared-filter=Infrared filter
+sp-infrared-light-emitting-diode=Infrared light emitting diode
+sp-infrared-sensor=Infrared sensor
 sp-insulated-metal-substrate=Insulated metal substrate
 sp-insulated-wire=Insulated wire
 sp-insulation-sheet=Insulation sheet
@@ -564,6 +569,7 @@ sp-matter-stabilizer=Matter stabilizer
 sp-medium-storage-tank=Medium storage tank
 sp-memory-chip=Memory chip
 sp-memory-die=Memory die
+sp-mercury-cadmium-telluride=Mercury cadmium telluride
 sp-mercury-ore=Mercury ore
 sp-metallurgic-science-pack=Metallurgic science pack
 sp-metallurgic-science-pack-2=Metallurgic science pack 2
@@ -617,6 +623,7 @@ sp-peltier-cell=Peltier cell
 sp-personal-roboport-mk3-equipment=Personal roboport mk3 equipment
 sp-personal-roboport-mk4-equipment=Personal roboport mk4 equipment
 sp-phosphorus=Phosphorus
+sp-photodiode=Photodiode
 sp-photonic-lab=Photonic lab
 sp-photovoltaic-cell=Photovoltaic cell
 sp-piezoelectric-sensor=Piezoelectric sensor
@@ -694,6 +701,7 @@ sp-rukite-rocket=Rukite rocket
 sp-rukite-rocket-silo=Rukite rocket silo
 sp-salt=Salt
 sp-sand=Sand
+sp-sapphire=Sapphire
 sp-seal=Seal
 sp-selenious-acid=Selenious acid
 sp-selenium-dioxide=Selenium dioxide
@@ -803,6 +811,7 @@ sp-yttrium=Yttrium
 sp-zinc-ore=Zinc ore
 sp-zinc-oxide=Zinc oxide
 sp-zinc-plate=Zinc plate
+sp-zinc-selenide=Zinc selenide
 sp-zinc-sulfate=Zinc sulfate
 sp-zircaloy=Zircaloy
 sp-zircon=Zircon
@@ -838,6 +847,7 @@ sp-alumina-from-enriched-aluminum=Alumina from enriched aluminum
 sp-aluminum-brass=Aluminum brass
 sp-aluminum-cable=Aluminum cable
 sp-aluminum-frame=Aluminum frame
+sp-aluminum-gallium-arsenide=Aluminum gallium arsenide
 sp-aluminum-ore-from-acrocrystal=Aluminum ore from acrocrystal
 sp-aluminum-sheet=Aluminum sheet
 sp-ammonium-metavanadate=Ammonium metavanadate
@@ -1127,6 +1137,8 @@ sp-geological-science-pack=Geological science pack
 sp-geological-science-pack-1=Geological science pack 1
 sp-geological-science-pack-2=Geological science pack 2
 sp-geological-science-pack-3=Geological science pack 3
+sp-germanium=Germanium
+sp-germanium-tetrachloride=Germanium tetrachloride
 sp-glass=Glass
 sp-glass-fiber=Glass fiber
 sp-glass-from-calcite=Glass from calcite
@@ -1204,6 +1216,8 @@ sp-indium-sulfate=Indium sulfate
 sp-induction-hardening-facility=Induction hardening facility
 sp-information-cube=Information cube
 sp-infrared-filter=Infrared filter
+sp-infrared-light-emitting-diode=Infrared light emitting diode
+sp-infrared-sensor=Infrared sensor
 sp-insulated-metal-substrate=Insulated metal substrate
 sp-insulated-wire=Insulated wire
 sp-insulated-wire-from-aluminum=Insulated wire from aluminum
@@ -1306,6 +1320,7 @@ sp-medium-storage-tank=Medium storage tank
 sp-memory-chip=Memory chip
 sp-memory-die=Memory die
 sp-mercury=Mercury
+sp-mercury-cadmium-telluride=Mercury cadmium telluride
 sp-metallurgic-science-pack=Metallurgic science pack
 sp-metallurgic-science-pack-2=Metallurgic science pack 2
 sp-metallurgic-science-pack-3=Metallurgic science pack 3
@@ -1371,6 +1386,7 @@ sp-personal-roboport-mk4-equipment=Personal roboport mk4 equipment
 sp-phosphoric-acid=Phosphoric acid
 sp-phosphorus=Phosphorus
 sp-phosphorus-from-acrovoid=Phosphorus from acrovoid
+sp-photodiode=Photodiode
 sp-photovoltaic-cell=Photovoltaic cell
 sp-piezoelectric-sensor=Piezoelectric sensor
 sp-pipe-from-lead=Pipe from lead
@@ -1455,6 +1471,7 @@ sp-rukite-rocket-silo=Rukite rocket silo
 sp-rukite-to-yemnuth-acrosphere=Rukite to yemnuth acrosphere
 sp-salt=Salt
 sp-sand=Sand
+sp-sapphire=Sapphire
 sp-seal=Seal
 sp-seed-processing=Seed processing
 sp-selenious-acid=Selenious acid
@@ -1596,6 +1613,7 @@ sp-zinc-oxide=Zinc oxide
 sp-zinc-plate=Zinc plate
 sp-zinc-plate-from-enriched-zinc=Zinc plate from enriched zinc
 sp-zinc-plate-from-zinc-oxide=Zinc plate from zinc oxide
+sp-zinc-selenide=Zinc selenide
 sp-zinc-sulfate=Zinc sulfate
 sp-zircaloy=Zircaloy
 sp-zircon=Zircon
@@ -1738,6 +1756,7 @@ sp-freezer=Freezer
 sp-frictionless-joint=Frictionless joint
 sp-gallium-processing=Gallium processing
 sp-geological-science-pack=Geological science pack
+sp-germanium-processing=Germanium processing
 sp-glass=Glass
 sp-glycerin=Glycerin
 sp-gravitational-devices=Gravitational devices
