@@ -2,7 +2,10 @@
 Version: 0.3.5
 Date: 2025-03-14
   Features:
+    - Added germanium recipe chain
     - Updated recipe chains for sensors
+  Bugfixes:
+    - Potassium hydroxide solution does not require advanced chemical plant to be made
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.4
 Date: 2025-03-07
